@startuml

title __UNDO_REDO's Class Diagram__\n

  namespace problems.Undo_Redo {
    class problems.Undo_Redo.AirConditioner {
        ~ isOn : boolean
        ~ temperature : int
        + setTemperature()
        + turnOffAC()
        + turnOnAC()
    }
  }
  

  namespace problems.Undo_Redo {
    interface problems.Undo_Redo.ICommand {
        {abstract} + execute()
        {abstract} + undo()
    }
  }
  

  namespace problems.Undo_Redo {
    class problems.Undo_Redo.Main {
        {static} + main()
    }
  }
  

  namespace problems.Undo_Redo {
    class problems.Undo_Redo.RemoteController {
        ~ acCommandHistory : Stack<ICommand>
        + pressButton()
        + setCommand()
        + undo()
    }
  }
  

  namespace problems.Undo_Redo {
    class problems.Undo_Redo.TurnOffACCommand {
        + TurnOffACCommand()
        + execute()
        + undo()
    }
  }
  

  namespace problems.Undo_Redo {
    class problems.Undo_Redo.TurnOnACCommand {
        + TurnOnACCommand()
        + execute()
        + undo()
    }
  }
  

  problems.Undo_Redo.RemoteController o-- problems.Undo_Redo.ICommand : command
  problems.Undo_Redo.TurnOffACCommand .up.|> problems.Undo_Redo.ICommand
  problems.Undo_Redo.TurnOffACCommand o-- problems.Undo_Redo.AirConditioner : ac
  problems.Undo_Redo.TurnOnACCommand .up.|> problems.Undo_Redo.ICommand
  problems.Undo_Redo.TurnOnACCommand o-- problems.Undo_Redo.AirConditioner : ac


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
